# c

./: .gitignore  CMakeLists.txt  CMakePresets.json  scatter.scat
.github/workflows/: build-feature-branches.yaml
cmake/: MockList.cmake  cmock.cmake  cmockhelper.cmake  create_mocks.rb  perl.sh  unity.cmake  utils.cmake  x86_64_cc.cmake
programs/addonliftfunction/: CMakeLists.txt  firsttask.h
programs/adittya/: CMakeLists.txt  adittya.c  adittya.h  main.c
programs/adittya/test/: CMakeLists.txt  ut_adittya.c  ut_adittya.h
programs/consequtive/: CMakeLists.txt  consequtive.c  consequtive.h  firsttask.c  main.c
programs/consequtive/test/: CMakeLists.txt  ut_consequtive.c  ut_consequtive.h
programs/experiments/: CMakeLists.txt  common.c  common.h  main.c  pyramid.c  pyramid.h  stars.c  stars.h
programs/moduloSender/: CMakeLists.txt  main.c  moduloSender.c  moduloSender.h
programs/moduloSender/test/: CMakeLists.txt  ut_moduloSender.c  ut_moduloSender.h
